force-app/main/default/objects/Add_On__c/Add_On__c.object-meta.xml
<CustomObject>
    <label>Add-On</label>
    <nameField>
        <label>Add-On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add-Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>