force-app/main/default/objects/Add_On__c/fields/AddOnService__c.field-meta.xml
<CustomField>
    <fullName>AddOnService__c</fullName>
    <label>AddOnService</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewService</fullName>
            </value>
            <value>
                <fullName>OldService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>