force-app/main/default/objects/Add_On__c/fields/AddOnServiceQty__c.field-meta.xml
<CustomField>
    <fullName>AddOnServiceQty__c</fullName>
    <label>AddOnServiceQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>