force-app/main/default/objects/Add_On__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drop</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipName>Add_Ons1</relationshipName>
    <type>Lookup</type>
</CustomField>