force-app/main/default/objects/Add_On__c/fields/Guest_No_Qty__c.field-meta.xml
<CustomField>
    <fullName>Guest_No_Qty__c</fullName>
    <label>Guest No. Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>