force-app/main/default/objects/Add_On__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead ID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Add_Ons</relationshipName>
    <type>Lookup</type>
</CustomField>