force-app/main/default/objects/Add_On__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipName>Add_Ons</relationshipName>
    <type>Lookup</type>
</CustomField>